test/contracts/pass/FibonacciMemoized.hs
module FibonacciMemoized where

fib :: Int -> Integer
fib n = fibs !! n
  where
    fibs = 0 : 1 : zipWith (+) fibs (tail fibs)